// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RegionSelector component > disables region correctly 1`] = `
<DocumentFragment>
  <div>
    <ods-tabs
      class="mb-4"
    >
      <ods-tab
        is-selected="true"
      >
        region-selector-all-locations
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-eu-filter
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-ca-filter
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-us-filter
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-ap-filter
      </ods-tab>
    </ods-tabs>
    <div
      class="flex flex-wrap gap-4"
    >
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-par"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-par
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-par
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-gra"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-gra
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-gra
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-rbx"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-rbx
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-rbx
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-sbg"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-sbg
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-sbg
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-lim"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/de.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_DE - region-selector-city-name_eu-west-lim
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lim
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-central-waw"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/pl.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_PL - region-selector-city-name_eu-central-waw
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-central-waw
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-eri"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/gb.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_GB - region-selector-city-name_eu-west-eri
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-eri
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-east-vin"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-east-vin
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-vin
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-west-hil"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-west-hil
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-hil
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="ca-east-bhs"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/ca.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_CA - region-selector-city-name_ca-east-bhs
            </ods-text>
            <ods-text
              preset="span"
            >
              ca-east-bhs
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="ap-southeast-sgp"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/sg.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_SG - region-selector-city-name_ap-southeast-sgp
            </ods-text>
            <ods-text
              preset="span"
            >
              ap-southeast-sgp
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="ap-southeast-syd"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/au.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_AU - region-selector-city-name_ap-southeast-syd
            </ods-text>
            <ods-text
              preset="span"
            >
              ap-southeast-syd
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-rbx-snc"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-rbx-snc
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-rbx-snc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-sbg-snc"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-sbg-snc
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-sbg-snc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-popover
          class="max-w-sm"
          trigger-id="ca-east-tor"
          with-arrow="true"
        >
          test
        </ods-popover>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] opacity-40"
          color="neutral"
          id="ca-east-tor"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/ca.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_CA - region-selector-city-name_ca-east-tor
            </ods-text>
            <ods-text
              preset="span"
            >
              ca-east-tor
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="ap-south-mum"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/in.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_IN - region-selector-city-name_ap-south-mum
            </ods-text>
            <ods-text
              preset="span"
            >
              ap-south-mum
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="labeu-west-1-preprod"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_labeu-west-1-preprod
            </ods-text>
            <ods-text
              preset="span"
            >
              labeu-west-1-preprod
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="labeu-west-1-dev-2"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_labeu-west-1-dev-2
            </ods-text>
            <ods-text
              preset="span"
            >
              labeu-west-1-dev-2
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="labeu-west-1-dev-1"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_labeu-west-1-dev-1
            </ods-text>
            <ods-text
              preset="span"
            >
              labeu-west-1-dev-1
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-lz-bru"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/be.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_BE - region-selector-city-name_eu-west-lz-bru
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lz-bru
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-lz-mad"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/es.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_ES - region-selector-city-name_eu-west-lz-mad
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lz-mad
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-gra-snc"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-gra-snc
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-gra-snc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-east-lz-dal"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-east-lz-dal
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-dal
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-west-lz-lax"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-west-lz-lax
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-lz-lax
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-east-lz-chi"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-east-lz-chi
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-chi
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-east-lz-nyc"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-east-lz-nyc
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-nyc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-east-lz-mia"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-east-lz-mia
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-mia
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-west-lz-pao"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-west-lz-pao
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-lz-pao
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-west-lz-den"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-west-lz-den
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-lz-den
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-east-lz-atl"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-east-lz-atl
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-atl
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-lz-mrs"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-lz-mrs
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lz-mrs
            </ods-text>
          </div>
        </ods-card>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RegionSelector component > does not break if there is no region at all 1`] = `
<DocumentFragment>
  <div>
    <div
      class="flex flex-wrap gap-4"
    />
  </div>
</DocumentFragment>
`;

exports[`RegionSelector component > renders correctly 1`] = `
<DocumentFragment>
  <div>
    <ods-tabs
      class="mb-4"
    >
      <ods-tab
        is-selected="true"
      >
        region-selector-all-locations
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-eu-filter
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-ca-filter
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-us-filter
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-ap-filter
      </ods-tab>
    </ods-tabs>
    <div
      class="flex flex-wrap gap-4"
    >
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-par"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-par
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-par
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector_selected w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-gra"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="true"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-gra
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-gra
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-rbx"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-rbx
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-rbx
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-sbg"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-sbg
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-sbg
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-lim"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/de.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_DE - region-selector-city-name_eu-west-lim
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lim
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-central-waw"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/pl.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_PL - region-selector-city-name_eu-central-waw
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-central-waw
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-eri"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/gb.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_GB - region-selector-city-name_eu-west-eri
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-eri
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-east-vin"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-east-vin
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-vin
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-west-hil"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-west-hil
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-hil
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="ca-east-bhs"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/ca.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_CA - region-selector-city-name_ca-east-bhs
            </ods-text>
            <ods-text
              preset="span"
            >
              ca-east-bhs
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="ap-southeast-sgp"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/sg.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_SG - region-selector-city-name_ap-southeast-sgp
            </ods-text>
            <ods-text
              preset="span"
            >
              ap-southeast-sgp
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="ap-southeast-syd"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/au.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_AU - region-selector-city-name_ap-southeast-syd
            </ods-text>
            <ods-text
              preset="span"
            >
              ap-southeast-syd
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-rbx-snc"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-rbx-snc
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-rbx-snc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-sbg-snc"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-sbg-snc
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-sbg-snc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="ca-east-tor"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/ca.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_CA - region-selector-city-name_ca-east-tor
            </ods-text>
            <ods-text
              preset="span"
            >
              ca-east-tor
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="ap-south-mum"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/in.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_IN - region-selector-city-name_ap-south-mum
            </ods-text>
            <ods-text
              preset="span"
            >
              ap-south-mum
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="labeu-west-1-preprod"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_labeu-west-1-preprod
            </ods-text>
            <ods-text
              preset="span"
            >
              labeu-west-1-preprod
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="labeu-west-1-dev-2"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_labeu-west-1-dev-2
            </ods-text>
            <ods-text
              preset="span"
            >
              labeu-west-1-dev-2
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="labeu-west-1-dev-1"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_labeu-west-1-dev-1
            </ods-text>
            <ods-text
              preset="span"
            >
              labeu-west-1-dev-1
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-lz-bru"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/be.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_BE - region-selector-city-name_eu-west-lz-bru
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lz-bru
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-lz-mad"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/es.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_ES - region-selector-city-name_eu-west-lz-mad
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lz-mad
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-gra-snc"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-gra-snc
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-gra-snc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-east-lz-dal"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-east-lz-dal
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-dal
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-west-lz-lax"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-west-lz-lax
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-lz-lax
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-east-lz-chi"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-east-lz-chi
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-chi
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-east-lz-nyc"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-east-lz-nyc
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-nyc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-east-lz-mia"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-east-lz-mia
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-mia
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-west-lz-pao"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-west-lz-pao
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-lz-pao
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-west-lz-den"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-west-lz-den
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-lz-den
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="us-east-lz-atl"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_US - region-selector-city-name_us-east-lz-atl
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-atl
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex p-3 transition-shadow cursor-pointer region_selector hover:shadow-md w-full sm:w-[311px] "
          color="neutral"
          id="eu-west-lz-mrs"
          tab-index="0"
          tabindex="0"
        >
          <span
            class="flex h-full mr-3"
          >
            <ods-radio
              is-checked="false"
              name=""
            />
          </span>
          <span
            class="w-[24px] h-[17px] shadow-md shadow-[#000E9C33] mr-3 bg-cover"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-5"
            >
              region-selector-country-name_FR - region-selector-city-name_eu-west-lz-mrs
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lz-mrs
            </ods-text>
          </div>
        </ods-card>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
